3) miniupnpd: up to 1.9.20150307 version.<br>
4) quagga: up to 0.99.24.1 version.<br>
5) pppd: fix disconnect socket regression after kernel pppoe sockets cleanup fix.<br>
6) init.d: enchange boot indications.<br>
7) init.d: ipv6: fix IPOE v6 mode with tunneled WAN for v4.<br>
8) init.d: irqbalance: tune modes and enable auto by defaults.<br>
9) init.d: wifi.sh: touch Channel by iwpriv (aplci connect after apply workaround).<br>
10) kernel: mips: allow optimized inliming.<br>
11) kernel: fastpaths: add disable nat fastpath option, small optimize.<br>
12) kernel: ralink_raeth: add support GRO offload.<br>
13) kernel: ralink_raeth: fix potential deadlock on unregister second interface.<br>
14) kernel: ralink_raeth: fix reuse dirty TX descriptor.<br>
15) kernel: inet: sanitize inet{,6} protocol demux.<br>
16) kernel: net: ipv6: make unsolicited report intervals configurable for mld.<br>
17) kernel: net: ipv6: mld: fix v1/v2 switchback timeout to rfc3810, 9.12.<br>
18) kernel: net: ipv4: disallow non-namespace aware protocols to register only if namespaces enabled.<br>.
19) kernel: net: ipv4: raise tcp PMTU probe mss base size.<br>
20) kernel: net: ipv4: ip_check_defrag should not assume that skb_network_offset is zero.<br>
21) kernel: net: ipv4: use binary search to choose tcp PMTU probe_size.<br>
22) kernel: net: ipv4: create probe timer for tcp PMTU as per RFC4821.<br>
23) kernel: net: make skb->skb_iif always track skb->dev.<br>
24) kernel: net: remove protocol from struct dst_ops.<br>
25) kernel: net: neigh: Keep neighbour cache entries if number of them is small enough.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>