@@ -696,7 +696,8 @@
 22) kernel: net: ipv4: create probe timer for tcp PMTU as per RFC4821.<br>
 23) kernel: net: make skb->skb_iif always track skb->dev.<br>
 24) kernel: net: remove protocol from struct dst_ops.<br>
-25) kernel: net: neigh: Keep neighbour cache entries if number of them is small enough.<br>
+25) kernel: net: neigh: keep neighbour cache entries if number of them is small enough.<br>
+26) kernel: ner: neigh: optimize neighbor entry size calculation.<br>
 <br>
 <br>
 <b>TODO:</b><br>
